added gavins page

--- a/gavin.html
+++ b/gavin.html
@@ -21,8 +21,8 @@
   </head>
   <body>
     <section class="page-header" style="height:225px">
-      <h1 class="project-name">Jason Willhite</h1>
-      <h2 class="project-tagline">Allow myself to introduce.... myself</h2>
+      <h1 class="project-name">Gavin Willhite</h1>
+      <h2 class="project-tagline">Destroyer of robots</h2>
       
         <a href="https://github.com/jasonwillhite/AboutMe" class="btn">View on GitHub</a>
       
@@ -30,7 +30,7 @@
     </section>
 
     <section class="main-content">
-      <h2 id="welcome-to-github-pages">Welcome to GitHub Pages</h2>
+      <h2 id="welcome-to-github-pages">Welcome to my web page!!</h2>
 
 <p>You can use the <a href="https://github.com/jasonwillhite/AboutMe/edit/master/index.md">editor on GitHub</a> to maintain and preview the content for your website in Markdown files.</p>
 
