remove caching behavior

--- a/gavin.html
+++ b/gavin.html
@@ -11,6 +11,7 @@
 <link rel="canonical" href="https://jasonwillhite.github.io/AboutMe/">
 <meta property="og:url" content="https://jasonwillhite.github.io/AboutMe/">
 <meta property="og:site_name" content="AboutMe">
+<meta http-equiv="CACHE-CONTROL" content="NO-CACHE">
 <script type="application/ld+json">
 {"@type":"WebSite","url":"https://jasonwillhite.github.io/AboutMe/","name":"AboutMe","headline":"Welcome to GitHub Pages","description":"github pages repository","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
