--- a/gavin.html
+++ b/gavin.html
@@ -33,7 +33,7 @@
     <section class="main-content">
       <h2 id="welcome-to-github-pages">Welcome to my web page!!</h2>
 
-<p>You can use the <a href="https://github.com/jasonwillhite/AboutMe/edit/master/index.md">editor on GitHub</a> to maintain and preview the content for your website in Markdown files.</p>
+<p>I'm into playing with friends, video games, making up dance moves and hanging out</p>
 
 <p>Once upon a time, I wrote a story called "Camping with a Robot" and the rest they say was History.</p>
 
