--- a/gavin.html
+++ b/gavin.html
@@ -32,6 +32,7 @@
 
     <section class="main-content">
       <h2 id="welcome-to-github-pages">Welcome to my web page!!</h2>
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTtr94qF-JFwSQUfR4FvRuYxXAbB2X-9osnMEpn6nh16t0Q2zv5&s" />
 
 <p>I'm into playing with friends, video games, making up dance moves and hanging out</p>
 
